--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <dialog id="winner">
     <p>Well done!</p>
     <hr><span class="kr kr2">수고했어 !</span>
-    <button class="close">close</button>
+    <br><button class="close">close</button>
   </dialog>
 
   <dialog id="loser">
