--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <h2>서울 기억력 게임</h2>
      </div>
      
-     <audio loop id="background-music">
+     <audio autoplay loop id="background-music">
        <source src="./Traditional_Korean_Music .mp3" type="audio/mpeg">
      </audio>
 
